tests/errors/E001.zen
int main() {
    return 0;
}

/// Error E001: Redefinition of function 'main'
int main() {
    return 1; 
}